deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: klausur-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: mpeteler.dhbw.schoeppi5.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: klausur-service
            port: 
              number: 8080
